# M5Camera_OpenMV

./: .gitignore  LICENSE  README.md
omv/: LICENCE.md  array.c  fb_alloc.c  vfs_wrapper.c
omv/boards/MAIX/: imlib_config.h  omv_boardconfig.h
omv/img/: affine.c  agast.c  apriltag.c  bmp.c  conv.c  dmtx.c  fast.c  font.c  haar.c  hough.c  imlib.c  jpeg.c  lbp.c  orb.c  picojpeg_util.c  ppm.c  zbar.c
omv/img/include/: fmath.h  imlib.h
omv/include/: framebuffer.h  ide_dbg.h  vfs_wrapper.h
omv/py/: py_image.c
omv/py/include/: mp.h
scripts/: micropy.json  pymakr.conf
scripts/src/: sample_binary.py  sample_face_detection.py
src/: Makefile  machine_pin.c  main.c  modcamera.c  modcamera.h  mpconfigport.h  partitions.csv
src/main/: CMakeLists.txt
